build: elasticsearch 설정 파일, 종속성 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,10 @@ spring:
     show-sql: true
     database: mysql
 
+  elasticsearch:
+    uris: http://localhost:9200
+
+
 aws:
   s3:
     accessKey: ${AWS_ACCESS_KEY}
