chore: redis 의존성, 설정 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,10 @@ spring:
   elasticsearch:
     uris: http://localhost:9200
 
+  data:
+    redis:
+      host: localhost
+      port: 6379
 
 aws:
   s3:
