--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/webtoon?connectionTimeZone=Asia/Seoul&characterEncoding=UTF-8
-    username: root
+    username: ${MYSQL_USERNAME}
     password: ${MYSQL_PASSWORD}
 
   jpa:
